--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^7.12.1",
+    "sequelize": "^5.19.0"
   }
 }
