--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "simple SPA for serial art uploads",
   "scripts": {
-    "dev": "nodemon ./server/index.js",
-    "start": "node ./server/index.js"
+    "dev": "nodemon -r dotenv/config ./server/index.js",
+    "start": "node -r dotenv/config ./server/index.js"
   },
   "main": "index.js",
   "repository": "git@github.com:neilnmartin/blitz-api.git",
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
