--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "pg": "^7.12.1",
-    "sequelize": "^5.19.0"
+    "sequelize": "^5.19.0",
+    "sequelize-cli": "^5.5.1"
   }
 }
