--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "main": "index.js",
   "repository": "git@github.com:neilnmartin/blitz-api.git",
-  "author": "Neil Martin <nnmartin94@gmail.com>",
+  "author": "Neil Martin",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
