--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "pg": "^7.12.1",
+    "pg-promise": "^9.3.3",
     "sequelize": "^5.19.0",
     "sequelize-cli": "^5.5.1"
   }
