--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
     "passport": "^0.4.0",
